--- a/SportsStore/Views/Home/Index.cshtml
+++ b/SportsStore/Views/Home/Index.cshtml
@@ -1,6 +1,7 @@
-@model ProductsListViewModel
+@using Microsoft.AspNetCore.Mvc.TagHelpers
+@model SportsStore.Models.ViewModels.ProductsListViewModel
 
-@foreach (var p in Model.Products ?? Enumerable.Empty<Product>()) {
+@foreach (var p in Model.Products) {
     <partial name="ProductSummary" model="p" />
 
 }
@@ -8,5 +9,7 @@
 <div page-model="@Model.PagingInfo" page-action="Index"
      page-classes-enabled="true" page-class="btn"
      page-class-normal="btn-outline-dark"
-     page-class-selected="btn-primary" class="btn-group pull-right m-1">
+     page-url-category="@Model.CurrentCategory"
+     page-class-selected="btn-primary" 
+     class="btn-group pull-right m-1">
 </div>
